--- a/taskpane.html
+++ b/taskpane.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>MS Ofiice Add-In Test</title>
+    <title>MS Office Add-In Test</title>
   </head>
   <body>
     <div>Szia világ!</div>
