--- a/taskpane.html
+++ b/taskpane.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>MS Office Add-In Test</title>
+    <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
   </head>
   <body>
     <div>Szia világ!</div>
