--- a/taskpane.html
+++ b/taskpane.html
@@ -2,8 +2,16 @@
   <head>
     <title>MS Office Add-In Test</title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      function handleClick(e)
+      {
+        document.getElementById("out").value="Hello";
+      }
+    </script>
   </head>
   <body>
     <div>Szia világ!</div>
+    <input type="button" value="Click me!" onclick="handleClick(event);"></input>
+    <output id="out"/>
   </body>
 </html>
