--- a/taskpane.html
+++ b/taskpane.html
@@ -12,6 +12,6 @@
   <body>
     <div>Szia világ!</div>
     <input type="button" value="Click me!" onclick="handleClick(event);"></input>
-    <output id="out"/>
+    <output id="out"></output>
   </body>
 </html>
