--- a/taskpane.html
+++ b/taskpane.html
@@ -12,14 +12,14 @@
           }
           else
           {
-            document.getElementById("out").value'Selected data: ' + asyncResult.value;
+            document.getElementById("out").value='Selected data: ' + asyncResult.value;
           }
         });
       }
     </script>
   </head>
   <body>
-    <div>1</div>
+    <div>2</div>
     <input type="button" value="Click me!" onclick="handleClick(event);"></input>
     <output id="out"></output>
   </body>
