--- a/taskpane.html
+++ b/taskpane.html
@@ -5,7 +5,9 @@
     <script type="text/javascript">
       function handleClick(e)
       {
+        document.getElementById("out").value="kattintott";
         Office.context.document.getSelectedDataAsync(Office.CoercionType.Text, function (asyncResult){
+          document.getElementById("out").value="async visszatért";
           if(asyncResult.status == Office.AsyncResultStatus.Failed)
           {
             document.getElementById("out").value='Action failed. Error: ' + asyncResult.error.message;
@@ -19,8 +21,8 @@
     </script>
   </head>
   <body>
-    <div>2</div>
+    <div>3</div>
     <input type="button" value="Click me!" onclick="handleClick(event);"></input>
-    <output id="out"></output>
+    <output id="out" value="---"></output>
   </body>
 </html>
