--- a/taskpane.html
+++ b/taskpane.html
@@ -21,8 +21,8 @@
     </script>
   </head>
   <body>
-    <div>5</div>
+    <div>6</div>
     <input type="button" value="Click me!" onclick="handleClick(event);"></input>
-    <output id="out" value="---"></output>
+    <output id="out">- - -</output>
   </body>
 </html>
