--- a/taskpane.html
+++ b/taskpane.html
@@ -3,7 +3,7 @@
     <title>MS Office Add-In Test</title>
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
     <script type="text/javascript">
-      function handleClick(e)
+      function handleClick_2(e)
       {
         document.getElementById("out").value="Office.context.displayLanguage: "+Office.context.displayLanguage;
         /*Office.context.document.getSelectedDataAsync(Office.CoercionType.Text, function (asyncResult){
@@ -18,6 +18,27 @@
           }
         });*/
       }
+      
+      Office.onReady(info => {
+  //if (info.host === Office.HostType.Word) {
+        document.getElementById("out").value=info.host;
+      });
+
+export async function handleClick() {
+  return Word.run(async context => {
+    /**
+     * Insert your Word code here
+     */
+
+    // insert a paragraph at the end of the document.
+    const paragraph = context.document.body.insertParagraph("Hello World", Word.InsertLocation.end);
+
+    // change the paragraph color to blue.
+    paragraph.font.color = "blue";
+
+    await context.sync();
+  });
+}
     </script>
   </head>
   <body>
