--- a/taskpane.html
+++ b/taskpane.html
@@ -42,7 +42,7 @@ export async function handleClick() {
     </script>
   </head>
   <body>
-    <div>9</div>
+    <div>Version 10</div>
     <input type="button" value="Click me!" onclick="handleClick(event);"></input>
     <output id="out">- - -</output>
   </body>
