--- a/taskpane.html
+++ b/taskpane.html
@@ -18,6 +18,9 @@
 
     <!-- Template styles -->
     <link href="taskpane.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript">
+    
+    </script>
 </head>
 
 <body class="ms-font-m ms-welcome ms-Fabric">
