--- a/taskpane.html
+++ b/taskpane.html
@@ -19,7 +19,22 @@
     <!-- Template styles -->
     <link href="taskpane.css" rel="stylesheet" type="text/css" />
     <script type="text/javascript">
-    
+    Office.onReady(info => {
+        document.getElementById('begu').textContent='Jello';
+  if (info.host === Office.HostType.Word) {
+    document.getElementById("sideload-msg").style.display = "none";
+    document.getElementById("app-body").style.display = "flex";
+    document.getElementById("run").onclick = run;
+  }
+});
+
+async function run() {
+  return Word.run(async context => {
+    const paragraph = context.document.body.insertParagraph("Hello World", Word.InsertLocation.end);
+    paragraph.font.color = "blue";
+    await context.sync();
+  });
+}
     </script>
 </head>
 
