--- a/taskpane.html
+++ b/taskpane.html
@@ -1,9 +1,5 @@
-<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT License. -->
-<!-- This file shows how to design a first-run page that provides a welcome screen to the user about the features of the add-in. -->
-
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
@@ -18,29 +14,12 @@
 
     <!-- Template styles -->
     <link href="taskpane.css" rel="stylesheet" type="text/css" />
-    <script type="text/javascript">
-    Office.onReady(info => {
-        document.getElementById('begu').textContent='Jello '+info.host;
-  if (info.host === Office.HostType.Word) {
-    document.getElementById("sideload-msg").style.display = "none";
-    document.getElementById("app-body").style.display = "flex";
-    document.getElementById("run").onclick = run;
-  }
-});
-
-async function run() {
-  return Word.run(async context => {
-    const paragraph = context.document.body.insertParagraph("Hello World", Word.InsertLocation.end);
-    paragraph.font.color = "blue";
-    await context.sync();
-  });
-}
-    </script>
+	
+    <script type="text/javascript" src="./taskpane.js"></script>
 </head>
 
 <body class="ms-font-m ms-welcome ms-Fabric">
     <header class="ms-welcome__header ms-bgColor-neutralLighter">
-        <img width="90" height="90" src="../../assets/logo-filled.png" alt="Contoso" title="Contoso" />
         <h1 id="begu" class="ms-font-su">W E L C O M E   3</h1>
     </header>
     <section id="sideload-msg" class="ms-welcome__main">
