--- a/taskpane.html
+++ b/taskpane.html
@@ -20,9 +20,7 @@
 	<body class="ms-font-m ms-welcome ms-Fabric">
 		<h3>Version 1</h3>
         <h1 id="begu" class="ms-font-su">W E L C O M E</h1>
-        <input type="button" value="CLICK ME!" onclick="document.getElementById('begu').textContent='Hello';"></input>
-        <div role="button" id="run" class="ms-welcome__action ms-Button ms-Button--hero ms-font-xl">
-            <span class="ms-Button-label">Run</span>
-        </div>
+        <input type="button" value="Hello!" onclick="document.getElementById('begu').textContent='Hello';"></input>
+	<input type="button" value="Run!" onclick="run();"></input>
 	</body>
 </html>
